load("//bazel:package.bzl", "homeworld_deb")

homeworld_deb(
    name = "hyperkube",
    bin = {
        "@kubernetes//cmd/hyperkube": "/usr/bin/hyperkube",
    },
    package = "homeworld-hyperkube",
    visibility = ["//visibility:public"],
)

homeworld_deb(
    name = "kubernetes",
    bin = {
        ":launch-apiserver.sh": "/usr/lib/hyades/launch-apiserver.sh",
        ":launch-ctrlmgr.sh": "/usr/lib/hyades/launch-ctrlmgr.sh",
        ":launch-proxy.sh": "/usr/lib/hyades/launch-proxy.sh",
        ":launch-scheduler.sh": "/usr/lib/hyades/launch-scheduler.sh",
        ":launch-kubelet.sh": "/usr/lib/hyades/launch-kubelet.sh",
    },
    data = {
        ":apiserver.service": "/usr/lib/systemd/system/apiserver.service",
        ":kube-ctrlmgr.service": "/usr/lib/systemd/system/kube-ctrlmgr.service",
        ":kube-proxy.service": "/usr/lib/systemd/system/kube-proxy.service",
        ":kube-scheduler.service": "/usr/lib/systemd/system/kube-scheduler.service",
        ":kubelet.service": "/usr/lib/systemd/system/kubelet.service",

        # the br_netfilter kernel module is needed for kube-proxy to function correctly
        ":br_netfilter.conf": "/usr/lib/modules-load.d/br_netfilter.conf",
    },
    package = "homeworld-kubernetes",
    depends = [
        "homeworld-cri-o",
        "homeworld-hyperkube",
    ],
    visibility = ["//visibility:public"],
)
