load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//bazel:package.bzl", "homeworld_deb")

go_binary(
    name = "node_exporter",
    visibility = ["//visibility:public"],
    embed = [
        "@com_github_prometheus_node_exporter//:go_default_library",
    ],
    # TODO: include -tags 'netgo static_build'
)

homeworld_deb(
    name = "package",
    bin = {
        ":node_exporter": "/usr/bin/node_exporter",
    },
    data = {
        ":prometheus-node-exporter.service": "/usr/lib/systemd/system/prometheus-node-exporter.service",
    },
    package = "homeworld-prometheus-node-exporter",
    visibility = ["//visibility:public"],
)

# TODO: include these flags:
#    ldflags:
#        -X {{repoPath}}/vendor/github.com/prometheus/common/version.Version={{.Version}}
#        -X {{repoPath}}/vendor/github.com/prometheus/common/version.Revision={{.Revision}}
#        -X {{repoPath}}/vendor/github.com/prometheus/common/version.Branch={{.Branch}}
#        -X {{repoPath}}/vendor/github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
#        -X {{repoPath}}/vendor/github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
