load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("//bazel:package.bzl", "homeworld_deb")

genrule(
    name = "fingerprint-base-rule",
    outs = ["fingerprint-base.tar"],
    srcs = [
        "//upload:keyring.asc",
        "//upload:KEYID",
    ],
    cmd = """
    tar -cf "$@" --transform="s|.*|./$$(tr A-Z a-z <"$(location //upload:KEYID)")|" --dereference -- "$(location //upload:keyring.asc)"
    """,
)

pkg_tar(
    name = "fingerprint.tar",
    deps = ["fingerprint-base.tar"],
    package_dir = "/etc/rkt/trustedkeys/prefix.d/homeworld.private",
)

homeworld_deb(
    name = "package",
    data = {
        ":10-containernet.conf": "/etc/rkt/net.d/10-containernet.conf",
    },
    deps = [
        ":fingerprint.tar",
    ],
    package = "homeworld-rkt-config",
    visibility = ["//visibility:public"],
)
