load("//bazel:package.bzl", "homeworld_deb")

homeworld_deb(
    name = "package",
    bin = {
        "@com_github_rkt_rkt//:rkt": "/usr/bin/rkt",
    },
    data = {
        "@com_github_rkt_rkt//:stage1-coreos.aci": "/usr/lib/rkt/stage1-images/stage1-coreos.aci",
        "@com_github_rkt_rkt//:stage1-kvm.aci": "/usr/lib/rkt/stage1-images/stage1-kvm.aci",
        "@com_github_rkt_rkt//:rkt.conf": "/usr/lib/tmpfiles.d/rkt.conf",
        "@com_github_rkt_rkt//:rkt-metadata.socket": "/usr/lib/systemd/system/rkt-metadata.socket",
        "@com_github_rkt_rkt//:rkt-metadata.service": "/usr/lib/systemd/system/rkt-metadata.service",
        "@com_github_rkt_rkt//:rkt-api-tcp.socket": "/usr/lib/systemd/system/rkt-api-tcp.socket",
        "@com_github_rkt_rkt//:rkt-api.service": "/usr/lib/systemd/system/rkt-api.service",
        ":services/rkt-gc.service": "/usr/lib/systemd/system/rkt-gc.service",
        ":services/rkt-gc.timer": "/usr/lib/systemd/system/rkt-gc.timer",
    },
    package = "homeworld-rkt",
    prerm = ":scripts/prerm",
    postrm = ":scripts/postrm",
    preinst = ":scripts/preinst",
    postinst = ":scripts/postinst",
    depends = [
        "dbus",
        "systemd",
        "iptables",
    ],
    visibility = ["//visibility:public"],
)

# TODO: remember why this was necessary at one point
#  if gcc --version | grep -q 'Debian 4.9'
#  then
#      rm rkt-src/stage1/usr_from_kvm/kernel/patches/0002-for-debian-gcc.patch
#  fi
